@@ -396,6 +396,20 @@ route{
         # Stop retransmission
         sl_send_reply("100", "Trying");
 
+        # Check From header user part for XML escape char
+        if ($fU =~ ".*[\"'<>&].*") {
+            xlog("L_WARN", "----ROUTE: From header user part contains char that cannot be handled.\n");
+            sl_send_reply("400", "Unsupported From header user part");
+            return;
+        }
+
+        # Check To header user part for XML escape char
+        if ($tU =~ ".*[\"'<>&].*") {
+            xlog("L_WARN", "----ROUTE: To header user part contains char that cannot be handled.\n");
+            sl_send_reply("400", "Unsupported To header user part");
+            return;
+        }
+
         if (t_check_trans()) {
             log(2, "----ROUTE: Duplicated INVITE\n");
             return;
